--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:commande-db
 mes-configs.commandes_last=3
 server.port=8090
+springfox.documentation.swagger-ui.proxy-url: true
+
 
